Adding self some more

--- a/students/yooni/1_homepage/Homepage.html
+++ b/students/yooni/1_homepage/Homepage.html
@@ -33,41 +33,39 @@
 		
        
 
-	
-      <img src='/AeonFlux.jpg'/><br>
-      	I dont remember this one too well, but I saw it on a Demo Disk once and I think my dad had seen the movie.<br>
+
+      <img src="AlterEcho.jpg"><br><br>
+      	You play as some goon in a purple and yellow suit and he an transform into this large boy with a big gun or a smol boy with a tiny gun.<br><br>
 
 
-      <img src="AlterEcho.jpg"><br>
-      	You play as some goon in a purple and yellow suit and he an transform into this large boy with a big gun or a smol boy with a tiny gun.<br>
+      <img src="Amplitude.jpg"><br><br>
+      	Basically my introduction to how cool video game music could be. "Baseline" by Quarashi has my heart forever.<br><br>
 
 
-      <img src="Amplitude.jpg"><br>
-      	Basically my introduction to how cool video game music could be. "Baseline" by Quarashi has my heart forever.<br>
+      <img src="ApeEscape.jpg"><br><br>
+      	You use a big butterfly net to catch monkeys with police sirens on their heads.<br><br>
 
 
-      <img src="ApeEscape.jpg"><br>
-      	You use a big butterfly net to catch monkeys with police sirens on their heads.<br>
+      <img src="Area51.jpg"><br><br>
+      	This game was absolutely terrifying. Or as terrifying as gunning down alien insurgents can be.<br><br>
 
 
-      <img src="Area51.jpg"><br>
-      	This game was absolutely terrifying. Or as terrifying as gunning down alien insurgents can be.<br>
+      <img src="Battle.jpg"><br><br>
+      	I piloted a awkwardly controlled mech for about thirty minutes and decided that there were better ways for me to spend my time.<br><br>
 
 
-      <img src="Battle.jpg"><br>
-      	I piloted a awkwardly controlled mech for about thirty minutes and decided that there were better ways for me to spend my time.<br>
+      <img src="Ben10.jpg"><br><br>
+      	As someone who snuck underneath their parents bed to watch the first episode of Ben 10 when it aired, I can say that I was deliciously satisfied.<br><br>
 
 
-      <img src="Protector.jpg"><br>
-      	As someone who snuck underneath their parents bed to watch the first episode of Ben 10 when it aired, I can say that I was deliciously satisfied.<br>
+      <img src="bge.jpg"><br><br>
+      	You take pictures of monsters and animals. Some of them you kill. Not the pig though. He's mad cool.<br><br>
 
 
-      <img src="bge.jpg"><br>
-      	You take pictures of monsters and animals. Some of them you kill. Not the pig though. He's mad cool.<br>
-
-
-      <img src="Burnout.jpg"><br>
-      	This is the game is like if Fast and Furious was less about a plot and winning a race and more about lighting your tires on fire.<br>
+      <img src="Burnout.jpg"><br><br>
+      	This is the game is like if Fast and Furious was less about a plot and winning a race and more about lighting your tires on fire.<br><br>
+<br><br>
+Lol ignore this, I tried my best.
 
  <pre>        
 		     	              		   /\     /\     /\
