--- a/students.html
+++ b/students.html
@@ -1,6 +1,6 @@
 ---
 ---
-<h1>Index of ./</h1>
+<h1>Index of ./ -- student work</h1>
 <ul></ul>
 
 <style>body{
@@ -72,7 +72,7 @@ ul li:last-child{
 }
 ul li:before{
     position:relative;
-    height:28px;
+    height:5px;
     width:20px;
     color:#fff;
     content:"";
@@ -84,4 +84,31 @@ ul li:before{
 
 
 
-<script>var c=document.getElementsByTagName("ul")[0];function escapeHtml(e){return e.replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;").replace(/"/g,"&quot;").replace(/'/g,"&#039;")}for(var files=[{% for url in site.static_files %}'{{ url.path | replace: "'", "\'" }}',{% endfor %}],i=0;i<files.length;i++){var url=files[i].split("/").slice(1);console.group(files[i]);for(var x=0;x<url.length;x++){var file=url[x];if(file)for(var element=null,parent=null,y=0;y<x+1;y++){var el=document.querySelector("[ref="+JSON.stringify(y+"-"+url[y])+"]");if(!el){var type="folder";url[y].indexOf(".")>-1&&(type="file"),el=document.createElement("li");var a=document.createElement("a");a.innerHTML=escapeHtml(url[y]),a.href=url.slice(0,x+1).join("/"),el.appendChild(a),el.setAttribute("ref",y+"-"+url[y]),el.setAttribute("level",y),el.setAttribute("class",type),parent?parent.appendChild(el):c.appendChild(el)}parent=el}}console.groupEnd(files[i])}document.title=document.querySelector("h1").innerHTML+=" ("+files.length+" items)"</script>
+<script>
+
+var c = document.getElementsByTagName("ul")[0];
+
+function escapeHtml(e) {
+    return e.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/"/g, "&quot;").replace(/'/g, "&#039;")
+}
+for(var files=[{% for url in site.static_files %}'{{ url.path | replace: "'", "\'" }}', { % endfor % }
+    ], i = 0; i < files.length; i++) {
+    var url = files[i].split("/").slice(1);
+    //console.group(files[i]);
+    for (var x = 0; x < url.length; x++) {
+        var file = url[x];
+        if (file)
+            for (var parent = null, y = 0; y < x + 1; y++) {
+                var el = document.querySelector("[ref=" + JSON.stringify(y + "-" + url[y]) + "]");
+                if (!el) {
+                    var type = "folder";
+                    url[y].indexOf(".") > -1 && (type = "file"), el = document.createElement("li");
+                    var a = document.createElement("a");
+                    a.innerHTML = escapeHtml(url[y]), a.href = url.slice(0, x + 1).join("/"), el.appendChild(a), el.setAttribute("ref", y + "-" + url[y]), el.setAttribute("level", y), el.setAttribute("class", type), parent ? parent.appendChild(el) : c.appendChild(el)
+                }
+                parent = el
+            }
+    }
+    console.groupEnd(files[i])
+}
+document.title = document.querySelector("h1").innerHTML += " (" + files.length + " items)" </script>
