--- a/students.html
+++ b/students.html
@@ -86,17 +86,8 @@ ul li:before{
 
 var c = document.getElementsByTagName("ul")[0];
 
-function escapeHtml(e) {
-    return e.replace(/&/g, "&amp;").replace(/</g, "&lt;").replace(/>/g, "&gt;").replace(/"/g, "&quot;").replace(/'/g, "&#039;")
-}
-for (var files = [{ %
-            for url in site.static_files %
-        }
-        '{{ url.path | replace: "'
-        ", "\
-        '" }}', { % endfor %
-        }
-    ], i = 0; i < files.length; i++) {
+function escapeHtml(e){return e.replace(/&/g,"&amp;").replace(/</g,"&lt;").replace(/>/g,"&gt;").replace(/"/g,"&quot;").replace(/'/g,"&#039;")}for(var files=[{% for url in site.static_files %}'{{ url.path | replace: "'", "\'" }}',{% endfor %}],i=0;i<files.length;i++)
+ {
     var url = files[i].split("/").slice(1);
     console.group(files[i]);
     
