--- a/students/mint-crona/1_hompage/2.html
+++ b/students/mint-crona/1_hompage/2.html
@@ -4,22 +4,12 @@
 	<style type="text/css">
 		body {background-color:#ff3333}
 	</style>
-	Why does this happen?
-	
 		</head>
-		<h2>Rumination</h2>
+		<h1>The Traitor's Manifesto</h1>
 		<head>
 		<body>
-		<a href=”http://www.mouchette.org/”>Mouchette is a trip.</a>
-		<p> I don't know if it is healthy for me to explore it.</p>
-		<img src="https://media.giphy.com/media/fX1WcG7v0A7FbLhQ2U/giphy.gif">
-		<h2>A concern</h2>
-		<p> Is the fascination with the lyrics of Traitor's Requiem a red flag of self-radicalization? </p>
-		<p> "If you body perishes, does your prayer also disappear?" </p>
-		<p> "Hell no! It's the start of a golden wind!" </p>
-		<p> The theme of revolution in it is heavily soaked in self sacrifice, caution should be taken. </p>
-		<h2>Praxis</h2>
-		<p>The wrong Amazon is on fire.</p>
+		<p>To those who can not help but stray from the path laid out before you, do not despair. Should you chose to release your grip on the chains, you will be a traitor to society, but do not be afraid, you are in the best company.</p>
+		<p>Society did not abandon you, it never cared for you. Your only value to it is how much value it can wring out of you. Your personal relationships do not matter to it. Your accomplishments, your personal improvements, your highs and lows are worthless to this machine. The winning move is not playing by it's rules.</p>
 
 
 		</body>
