Update Circle of Life.html

--- a/students/irisykang/3_twine/Circle of Life.html
+++ b/students/irisykang/3_twine/Circle of Life.html
@@ -112,7 +112,9 @@ tw-icon.redo {
 
 }
 
+
 </style><script role="script" id="twine-user-script" type="text/twine-javascript">
+
 
 </script><tw-passagedata pid="1" name="Hello World!" tags="" position="1185,469" size="100,100">I am born.
 (set: $mySpecies to (either: &quot;cicada&quot;, &quot;monstera&quot;, &quot;gecko&quot;,&quot;printer&quot;,&quot;jellyfish&quot; ) )
@@ -167,23 +169,21 @@ I&#39;m currently waiting in the nursery for someone to pick me up.
 That was a short life, but...
 
 [[That&#39;s okay, because life ever ends-&gt;Hello World!]]
-
-&lt;img src = &quot;https://media.giphy.com/media/xUOxf4w6Nb5CPuOhQQ/giphy.gif&quot;&gt;</tw-passagedata><tw-passagedata pid="12" name="Printer death 1" tags="" position="1579,1433" size="100,100">When I tried to swallow it back, it got stuck in my throat and I couldn&#39;t breath anymore. 
+</tw-passagedata><tw-passagedata pid="12" name="Printer death 1" tags="" position="1579,1433" size="100,100">When I tried to swallow it back, it got stuck in my throat and I couldn&#39;t breath anymore. 
 
 &lt;img src=&quot;https://cdn11.bigcommerce.com/s-dzgnbr0uhr/images/stencil/1193x795/uploaded_images/paper-jam.jpg?t=1558186598&quot; width =500&gt;
 
 [[That&#39;s okay, because life ever ends-&gt;Hello World!]]
 
-&lt;img src = &quot;https://media.giphy.com/media/xUOxf4w6Nb5CPuOhQQ/giphy.gif&quot;&gt;</tw-passagedata><tw-passagedata pid="13" name="Monstera death" tags="" position="779,1448" size="100,100">I didn&#39;t have any energy to stand up. I fell down and never stood up again.
+</tw-passagedata><tw-passagedata pid="13" name="Monstera death" tags="" position="779,1448" size="100,100">I didn&#39;t have any energy to stand up. I fell down and never stood up again.
 
 [[That&#39;s okay, because life ever ends-&gt;Hello World!]]
 
 
-&lt;img src = &quot;https://media.giphy.com/media/xUOxf4w6Nb5CPuOhQQ/giphy.gif&quot;&gt;</tw-passagedata><tw-passagedata pid="14" name="Jellyfish death 1" tags="" position="1151,1408" size="100,100">I thought jellyfish lived forever! I guess not.
+</tw-passagedata><tw-passagedata pid="14" name="Jellyfish death 1" tags="" position="1151,1408" size="100,100">I thought jellyfish lived forever! I guess not.
 
 [[That&#39;s okay, because life ever ends-&gt;Hello World!]]
-
-&lt;img src = &quot;https://media.giphy.com/media/xUOxf4w6Nb5CPuOhQQ/giphy.gif&quot;&gt;</tw-passagedata><tw-passagedata pid="15" name="sorrels" tags="" position="1460,740" size="100,100">I&#39;ve been in this exact spot for.. all I can remember. 
+</tw-passagedata><tw-passagedata pid="15" name="sorrels" tags="" position="1460,740" size="100,100">I&#39;ve been in this exact spot for.. all I can remember. 
 I spend most of my time throwing up (I can throw up on demand), and I watch people during my free time.
 
 Oh no, I&#39;m feeling it again. I feel like I&#39;m going to throw up!
@@ -243,8 +243,7 @@ In a blink of an eye, I no longer see any light. I guess this is death.
 
 
 [[That&#39;s okay, because life ever ends-&gt;Hello World!]]
-
-&lt;img src = &quot;https://media.giphy.com/media/xUOxf4w6Nb5CPuOhQQ/giphy.gif&quot;&gt;</tw-passagedata><tw-passagedata pid="30" name="offer help" tags="" position="2243,493" size="100,100">&quot;hewwo?&quot;, I asked.
+</tw-passagedata><tw-passagedata pid="30" name="offer help" tags="" position="2243,493" size="100,100">&quot;hewwo?&quot;, I asked.
 I don&#39;t hear a respond, so I decide to move closer.
 
 as soon as I get [[closer..-&gt;Wild Gecko Death 3]]</tw-passagedata><tw-passagedata pid="31" name=" keep walking" tags="" position="2127,652" size="100,100">I keep on walking for a bit, but I felt bad about the frog that I left so I [[walk back.. -&gt;offer help]]
@@ -259,17 +258,16 @@ and I was (text-style: &quot;bold&quot;)[ [[STARVING.-&gt; House Gecko Death 1]]
 Slowly, everthing started to fade away and I felt like I was going to take a long nap.
 
 [[That&#39;s okay, because life ever ends-&gt;Hello World!]]
-
-&lt;img src = &quot;https://media.giphy.com/media/xUOxf4w6Nb5CPuOhQQ/giphy.gif&quot;&gt;</tw-passagedata><tw-passagedata pid="35" name="ocean" tags="ocean" position="1125,889" size="100,100">I am so free in the ocean!
+</tw-passagedata><tw-passagedata pid="35" name="ocean" tags="ocean" position="1125,889" size="100,100">I am so free in the ocean!
 
 [[&lt;img src = &quot;https://media.giphy.com/media/l0MYz0pFEFkkatKaA/source.gif&quot;&gt;-&gt;ocean next]]
 
-</tw-passagedata><tw-passagedata pid="36" name="Wild Gecko Death 3" tags="" position="2468.5,218.5" size="100,100">In a blink of an eye, I no longer see any light. I guess this is death.
+</tw-passagedata><tw-passagedata pid="36" name="Wild Gecko Death 3" tags="" position="2468,218" size="100,100">In a blink of an eye, I no longer see any light. I guess this is death.
 
 
 [[That&#39;s okay, because life ever ends-&gt;Hello World!]]
 
-&lt;img src = &quot;https://media.giphy.com/media/xUOxf4w6Nb5CPuOhQQ/giphy.gif&quot;&gt;</tw-passagedata><tw-passagedata pid="37" name=" college kids 1" tags="" position="813,975" size="100,100">They put me in the corner of the room. It wasn&#39;t a very nice spot, but it was livable.
+</tw-passagedata><tw-passagedata pid="37" name=" college kids 1" tags="" position="813,975" size="100,100">They put me in the corner of the room. It wasn&#39;t a very nice spot, but it was livable.
 
 They didn&#39;t talk to me very often, but they stopped by me to water me and I liked them.
 
@@ -287,7 +285,7 @@ And they put me into a dark room where I couldn&#39;t see any sunlight.
 
 I kept on thinking about the old lady who took good care of me and I waited again...
 
-(event: when time &gt; 4s)[[[I never stopped waiting -&gt;Monstera death]]]</tw-passagedata><tw-passagedata pid="41" name="eaten by turtle" tags="" position="1113,1207.963134765625" size="100,100">It&#39;s a turtle!
+(event: when time &gt; 4s)[[[I never stopped waiting -&gt;Monstera death]]]</tw-passagedata><tw-passagedata pid="41" name="eaten by turtle" tags="" position="1113,1207" size="100,100">It&#39;s a turtle!
 
 [[and I get eaten.. like spaghetti apparently.-&gt;Jellyfish death 1]]
 
@@ -306,7 +304,6 @@ I go to sleep.. until someone puts me back into power.
 
 [[That&#39;s okay, because life ever ends-&gt;Hello World!]]
 
-&lt;img src = &quot;https://media.giphy.com/media/xUOxf4w6Nb5CPuOhQQ/giphy.gif&quot;&gt;
 
 </tw-passagedata><tw-passagedata pid="44" name="ocean next" tags="" position="963,993" size="100,100">But soon.. I see something big approaching to me. What do I do?
 
