--- a/students/961cho/4_bitsy/index.html
+++ b/students/961cho/4_bitsy/index.html
@@ -8700,7 +8700,7 @@ CHAR 255
 	<!-- GAME CANVAS -->
 	<canvas id='game'></canvas>
 
-<audio src="Entire(Á¤½ºver).mp3" autoplay loop></audio>
+<audio src="Entire.mp3" autoplay loop></audio>
 <script>document.addEventListener('mousedown', function(){ Array.prototype.slice.call(document.getElementsByTagName("audio")).forEach(function(element){ element.play(); }); });</script></body>
 
 
