adding shori's homepage

--- a/students.html
+++ b/students.html
@@ -1,2 +1,2 @@
- <body bgcolor="#ffb523"><center><iframe src="https://docs.google.com/document/d/1hS1iIRevh0kY-eDjhtL1m728ybHaCjwko9GtQZtM8ug/pub?embedded=true" style="border: 0; width: 600px; height: 100%"></iframe></center>
+ <body bgcolor="#ffcc66"><center><iframe src="https://docs.google.com/document/d/1hS1iIRevh0kY-eDjhtL1m728ybHaCjwko9GtQZtM8ug/pub?embedded=true" style="border: 0; width: 600px; height: 100%"></iframe></center>
 </body>
