--- a/index.html
+++ b/index.html
@@ -1,2 +1,2 @@
- <body bgcolor="#ffb523"><center><iframe src="https://docs.google.com/document/d/e/2PACX-1vTFUoHUS0uaeHmHaqTlKYWsKrdR3XR2U9MqxoSk1xANe_jQ2dXx9xedknKTQg7QJ_90jrcw8q-y8KWu/pub?embedded=true" style="border: 0; width: 95%; height: 100%"></iframe>
+ <body bgcolor="#ffcc66"><center><iframe src="https://docs.google.com/document/d/e/2PACX-1vTFUoHUS0uaeHmHaqTlKYWsKrdR3XR2U9MqxoSk1xANe_jQ2dXx9xedknKTQg7QJ_90jrcw8q-y8KWu/pub?embedded=true" style="border: 0; width: 95%; height: 100%"></iframe>
 </center>
